Prepare MQTT cammand line options

--- a/solaxd.conf
+++ b/solaxd.conf
@@ -2,7 +2,7 @@
 # config file for solaXd service.
 
 # default configuration
-SOLAXD_OPTS="-d /dev/ttyUSB0 -p 6789 -s 10 -l /var/log/solaxd.log -L 4"
+SOLAXD_OPTS="-d /dev/ttyUSB0 -p 6789 -S localhost -P 1883 -U mqtt -W mqtt -s 10 -l /var/log/solaxd.log -L 4"
 
 # example for a rule created interface symlink
-#SOLAXD_OPTS="-d /dev/ttySOLAX -p 6789 -s 15 -l /var/log/solaxd.log -L 1"
+#SOLAXD_OPTS="-d /dev/ttySOLAX -p 6789 -S brocker.lan -P 1883 -U mqttLogin -W mqttLPasswd -s 15 -l /var/log/solaxd.log -L 1"
